--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,12 @@ name = "egui-pixel-editor"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = []
+
 [dependencies]
 egui = "0.31.1"
+ndarray = { version = "0.16.1", optional = true }
 
 [dev-dependencies]
 eframe = "0.31.1"
